syntax = "proto3";

package membership;

import "definitions/user/User.proto";

option go_package = "github.com/yb2020/odoc-proto/gen/go/membership";


// MembershipType 会员类型
enum MembershipType {
	MEMBERSHIP_TYPE_UNKNOWN = 0; // 未知
	MEMBERSHIP_TYPE_FREE    = 1; // Free
	MEMBERSHIP_TYPE_PRO     = 2; // PRO
}

// CreditType 积分类型
enum CreditType {
	CREDIT_TYPE_UNKNOWN     = 0; // 未知
	CREDIT_TYPE_CREDIT      = 1; // 积分
	CREDIT_TYPE_ADD_ON_CREDIT = 2; // 附加积分
}

// CreditInOutType 积分收支类型
enum CreditInOutType {
	CREDIT_IN_OUT_TYPE_UNKNOWN = 0; // 未知
	CREDIT_IN_OUT_TYPE_INCOME  = 1; // 收入
	CREDIT_IN_OUT_TYPE_EXPENSE = 2; // 支出
}

// CreditPayType 积分支付类型
enum CreditPayType {
	CREDIT_PAY_TYPE_UNKNOWN = 0; // 未知或者错误
	// 系统操作与生命周期管理 (1-99)
	CREDIT_PAY_TYPE_EXPIRED = 1; // 积分过期

	// 会员订阅与套餐相关 (100-199)
	CREDIT_PAY_TYPE_SUB_FREE            = 101; // Free会员订阅
	CREDIT_PAY_TYPE_SUB_PRO             = 102; // PRO会员订阅
	CREDIT_PAY_TYPE_SUB_PRO_ADD_ON_CREDIT = 103; // PRO版附加积分包订阅

	// 功能服务消费使用 (200-299)
	CREDIT_PAY_TYPE_SERVICE_COST = 201; // 功能服务消费使用
	CREDIT_PAY_TYPE_SERVICE_RETRIEVE = 202; // 功能服务退还
}

// CreditPaymentStatus 积分支付状态 (采用二阶段提交模式)
enum CreditPaymentStatus {
	CREDIT_PAYMENT_STATUS_UNKNOWN = 0; // 未知
	CREDIT_PAYMENT_STATUS_PAY_PENDING = 1; // 待处理 (新创建)
	CREDIT_PAYMENT_STATUS_PAY_AWAITING_CONFIRMATION = 2; // 等待业务确认 (积分已预扣)
	CREDIT_PAYMENT_STATUS_PAY_SUCCESS = 3; // 支付成功(业务已确认)
	CREDIT_PAYMENT_STATUS_PAY_FAILED  = 4; // 支付失败(如积分不足导致预扣失败)
	CREDIT_PAYMENT_STATUS_PAY_CANCELLED = 5; // 已取消(业务已回滚)
}

// CreditServiceType 积分功能类型
enum CreditServiceType {
	CREDIT_SERVICE_TYPE_UNKNOWN = 0; // 未知

	CREDIT_SERVICE_TYPE_DOCS_UPLOAD = 101; // 文档上传

	// 笔记功能
	CREDIT_SERVICE_TYPE_NOTE_SUMMARY      = 201; // 笔记总结功能
	CREDIT_SERVICE_TYPE_NOTE_WORD         = 202; // 笔记单词功能
	CREDIT_SERVICE_TYPE_NOTE_EXTRACT      = 203; // 笔记标注功能
	CREDIT_SERVICE_TYPE_NOTE_MANAGE       = 204; // 笔记管理功能
	CREDIT_SERVICE_TYPE_NOTE_PDF_DOWNLOAD = 205; // 笔记PDF下载功能

	// AI功能
	CREDIT_SERVICE_TYPE_AI_COPILOT = 301; // AI辅读

	// 翻译功能
	CREDIT_SERVICE_TYPE_TRANSLATE_OCR      = 401; // OCR翻译
	CREDIT_SERVICE_TYPE_TRANSLATE_WORD     = 402; // 单词翻译
	CREDIT_SERVICE_TYPE_TRANSLATE_FULLTEXT = 403; // 全文翻译
	CREDIT_SERVICE_TYPE_TRANSLATE_AI       = 404; // AI翻译
}

// 订阅套餐信息
message SubInfo {
    uint32 type = 1; // 订阅类型，对应constant.OrderType 1:Free, 2:PRO, 3:PRO_AddOnCredit
    string name = 2; // 订阅名称
    uint64 price = 3; // 订阅价格
	uint64 originalPrice = 4; // 原始订阅价格
    string currency = 5; // 货币单位
    uint64 credit = 6; // 积分值
	uint64 originalCredit = 7; // 原始积分值
    uint64 addOnCredit = 8; // 附加积分值
    uint32 duration = 9; // 有效期（单位：月）
    string stripePayMode = 10; // stripe支付模式 payment: 一次性付款, subscription: 订阅
    string stripePriceId = 11; // stripe价格ID
}

// 基础权限
message BasePermission {
	SubInfo subInfo = 1; // 订阅套餐信息
	bool isEnableAddOnCredit = 2; // 是否允许使用附加信用值
	bool isEnableSubAddOnCredit = 3; // 是否允许订阅附加信用值
	uint32 maxAddOnCreditSubCountOfMonth = 4; // 每月最大附加订阅包数量
	SubInfo subAddOnCreditInfo = 5; // 附加积分订阅套餐信息
}

// 文档权限
message DocsPermission {
	uint64 maxStorageCapacity = 1; // 最大存储容量（单位：MB）
	uint64 maxStorageCapacityOriginal = 2; // 原始最大存储容量（单位：MB）
	uint64 docUploadMaxSize = 3; // 文献上传文件最大值，单位（MB）
	uint64 docUploadMaxSizeOriginal = 4; // 原始文献上传文件最大值，单位（MB）
	uint32 docUploadMaxPageCount = 5; // 文献上传文件最大页数
	uint32 docUploadMaxPageCountOriginal = 6; // 原始文献上传文件最大页数
}

// 笔记权限
message NotePermission {
	bool isNoteSummary = 1; // 是否开启笔记总结功能
	bool isNoteWord = 2; // 是否开启笔记Word功能
	bool isNoteExtract = 3; // 是否开启笔记摘录功能
	bool isNoteManage = 4; // 是否开启笔记管理功能
	bool isNotePdfDownload = 5; // 是否开启笔记PDF下载功能
}

// Copilot模型
message CopilotModel {
	string key = 1; // 模型key
	string name = 2; // 模型名称
	bool isEnable = 3; // 是否开启功能
	bool isFree = 4; // 是否免费
	uint64 creditCost = 5; // 模型每次消耗信用值
}

// Copilot权限
message CopilotPermission {
	bool isEnable = 1; // 是否开启AI辅读
	repeated CopilotModel models = 2; // Copilot模型
}

// AI权限
message AIPermission {
	CopilotPermission copilot = 1; // Copilot权限
}

// 翻译权限
message TranslatePermission {
	bool isOcr = 1; // 是否开启OCR功能
	uint64 ocrCreditCost = 2; // 每次OCR消耗信用值
	bool isWordTranslate = 3; // 是否开启Word翻译功能
	uint64 wordTranslateCreditCost = 4; // 每次Word翻译消耗信用值
	bool isFullTextTranslate = 5; // 是否开启全文翻译功能
	uint64 fullTextTranslateCreditCost = 6; // 每次全文翻译消耗信用值
	uint64 fullTextTranslateCreditCostOriginal = 7; // 原始每次全文翻译消耗信用值
	uint64 fullTextTranslateMaxPageCount = 8; // 全文翻译最大页数
	bool isAiTranslation = 9; // 是否开启AI翻译功能
	uint64 aiTranslationCreditCost = 10; // 每次AI翻译消耗信用值
}

// 用户基础权限
message UserBasePermission {
	bool isEnableAddOnCredit = 2; // 是否允许使用附加信用值
	bool isEnableSubAddOnCredit = 3; // 是否允许订阅附加信用值
}

// 用户文档权限
message UserDocsPermission {
	uint64 maxStorageCapacity = 1; // 最大存储容量（单位：MB）
	uint64 docUploadMaxSize = 2; // 文献上传文件最大值，单位（MB）
	uint32 docUploadMaxPageCount = 3; // 文献上传文件最大页数
	uint64 useStorageCapacity = 4; // 已使用存储容量（单位：MB）
}

// 用户笔记权限
message UserNotePermission {
	bool isNoteSummary = 1; // 是否开启笔记总结功能
	bool isNoteWord = 2; // 是否开启笔记Word功能
	bool isNoteExtract = 3; // 是否开启笔记摘录功能
	bool isNoteManage = 4; // 是否开启笔记管理功能
	bool isNotePdfDownload = 5; // 是否开启笔记PDF下载功能
}

// 用户AI权限
message UserAIPermission {
	CopilotPermission copilot = 1; // Copilot权限
}

// 用户翻译权限
message UserTranslatePermission {
	bool isOcr = 1; // 是否开启OCR功能
	uint64 ocrCreditCost = 2; // 每次OCR消耗信用值
	bool isWordTranslate = 3; // 是否开启Word翻译功能
	uint64 wordTranslateCreditCost = 4; // 每次Word翻译消耗信用值
	bool isFullTextTranslate = 5; // 是否开启全文翻译功能
	uint64 fullTextTranslateCreditCost = 6; // 每次全文翻译消耗信用值
	uint64 fullTextTranslateMaxPageCount = 7; // 全文翻译最大页数
	bool isAiTranslation = 8; // 是否开启AI翻译功能
	uint64 aiTranslationCreditCost = 9; // 每次AI翻译消耗信用值
}

// 会员订阅套餐信息
message MembershipSubPlanInfo {
   uint32 type = 1; // 会员类型，对应dto.MembershipType 0:Unknown, 1:Free, 2:PRO
   string name = 2; // 订阅名称
   string description = 3; // 订阅描述
   bool isFree = 4; // 是否为免费
   BasePermission base = 5; // 基础套餐
   DocsPermission docs = 6; // 文档模块权限
   NotePermission note = 7; // 笔记模块权限
   AIPermission ai = 8; // AI模块权限
   TranslatePermission translate = 9; // 翻译模块权限
}

// 用户会员基础信息Info
message UserMembershipBaseInfo {
   string userId = 1; // 用户ID
   uint32 type = 2; // 会员类型，对应dto.MembershipType 0:Unknown, 1:Free, 2:PRO
   string typeName = 3; // 会员类型名称
   uint64 credit = 4; // 会员积分
   uint64 addOnCredit = 5; // 附加积分
   bool isExpired = 6; // 是否会员过期
   uint32 expiredDay = 7; // 订阅剩余有效期（单位：天）
   uint64 startAt = 8; // 订阅开始时间
   uint64 endAt = 9; // 订阅结束时间
}

// 用户会员信息Info
message UserMembershipInfo {
   UserMembershipBaseInfo baseInfo = 1; // 用户会员基础信息
   UserPermission permission = 2; // 用户会员权限
}

// 用户会员权限
message UserPermission {
   UserBasePermission base = 1; // 基础套餐
   UserDocsPermission docs = 2; // 文档模块权限
   UserNotePermission note = 3; // 笔记模块权限
   UserAIPermission ai = 4; // AI模块权限
   UserTranslatePermission translate = 5; // 翻译模块权限
}


// @api_path: /api/public/membership/get-subplan-infos
// @method: GET
// @content-type: application/json
// @summary: 获取订阅套餐信息列表
message GetSubPlanInfosRequest {
}

message GetSubPlanInfosResponse {
   repeated MembershipSubPlanInfo subPlanInfos = 1;
}

// @api_path: /api/membership/get-base-info
// @method: GET
// @content-type: application/json
// @summary: 获取用户会员基础信息
message GetBaseInfoRequest {
}

message GetBaseInfoResponse {
   UserMembershipBaseInfo baseInfo = 1;
}


// @api_path: /api/membership/get-info
// @method: GET
// @content-type: application/json
// @summary: 获取用户会员信息
message GetInfoRequest {
}

message GetInfoResponse {
   UserMembershipInfo info = 1;
}



// @api_path: /api/membership/user/profile
// @method: GET
// @content-type: application/json
// @summary: 前端获取用户信息和会员信息
message GetMembershipProfileRequest {}
message GetMembershipProfileResponse {
  user.User user = 1;
  UserMembershipInfo info = 2;
}

// @api_path: /api/membership/get-login-page-config
// @method: GET
// @content-type: application/json
// @summary: 获取登录页面配置
message GetLoginPageConfigRequest {
}

message GetLoginPageConfigResponse {
    bool isGoogleLoginEnabled           = 1;
    bool isUsernamePasswordLoginEnabled = 2;
    bool isRegisterEnabled              = 3;
    bool isForgetPasswordEnabled        = 4;
}  


// @api_path: /api/membership/get-user-credit
// @method: GET
// @content-type: application/json
// @summary: 获取用户积分
message GetUserCreditRequest {
}

message GetUserCreditResponse {
   uint64 credit = 1;
   uint64 addOnCredit = 2;
}